frontend/test/should_fail/array_removeIf_scalar.grg
test array_removeIf(ref a:array<int>) {
	if {
		a.removeIf{value:int -> value * Math::pi()}.empty();
	}	
}
